<resources>
    <string name="app_name">Pet Zone</string>


    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="user_type">User Type</string>
    <string name="admin">Admin</string>
    <string name="customer">Customer</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_an_account_sign_in">Have an Account ? Sign In</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="tab_text_1">Items</string>
    <string name="tab_text_2">Requested</string>
    <string name="tab_text_3">Brought</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Food Title</string>
    <string name="price">200</string>
    <string name="quantity">4</string>
    <string name="_0">0</string>
    <string name="uuid">UUID</string>
    <string name="user_name">User Name</string>
    <string name="log_in">Log In</string>
    <string name="haven_t_an_account_sign_up">Haven\'t an Account ? Sign Up</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="storage">Storage</string>
    <string name="sold">Sold</string>
</resources>