<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:id="@+id/layout1"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="22dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="#333232"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="7.3dp"
                android:background="@drawable/small_cicle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/half_circle"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:background="@drawable/half_circle" />

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="13dp"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/nameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#ffffffff"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:hint="@string/name"
                        android:id="@+id/nameText" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileNoTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#ffffffff"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    android:layout_marginBottom="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mobileNoText"
                        android:singleLine="true"
                        android:hint="@string/mobile_no"
                        android:inputType="text|number"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_type"
                    android:textSize="17sp"
                    android:textColor="#227825"
                    android:layout_marginStart="2dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/checkBoxLayout">
                    <CheckBox
                        android:id="@+id/checkMBBSId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:buttonTint="#1566e0"
                        android:text="@string/admin"/>
                    <CheckBox
                        android:id="@+id/checkFCPSId"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_height="wrap_content"
                        android:buttonTint="#1566e0"
                        android:text="@string/customer"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#ffffffff"
                    app:errorEnabled="true"
                    android:layout_marginBottom="5dp"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/emailText"
                        android:hint="@string/your_email"
                        android:inputType="textWebEmailAddress"
                        android:singleLine="true"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="#ffffffff"
                    app:errorEnabled="true"
                    app:endIconMode="password_toggle"
                    android:layout_marginBottom="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/passwordText"
                        android:hint="@string/password"
                        android:inputType="numberPassword"
                        android:singleLine="true"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newSignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/register"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/signInTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/have_an_account_sign_in"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:textColor="#1566e0"
                    android:layout_marginBottom="20dp"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/backToMain2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:background="@drawable/image_back_34dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"/>

</RelativeLayout>